Made the alignment correct, and worked on text area

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ button {
 }
 img {
   align-items: center;
-  margin: 70px 400px 0px 400px;
+  margin: 70px 400px 0px 620px;
 }
 
 .search {
@@ -18,11 +18,19 @@ img {
   border-radius: 24px;
   z-index: 3;
   height: 44px;
-  margin: 10px auto;
+  margin: 20px auto;
   width: 500px;
 }
+
+.searchbar {
+  margin-left: 20px;
+  outline: none;
+  border: none;
+  border-radius: 24px;
+  width: 100%;
+}
 .buttons {
-  margin: 30px 0 0 400px;
+  margin: 30px 0 0 600px;
   align-items: center;
 }
 .butn {
@@ -46,7 +54,7 @@ img {
   color: #3c4043;
   display: inline-block;
   line-height: 28px;
-  margin: 20px 0 0 410px;
+  margin: 20px 0 0 600px;
 }
 
 #lang a {
